@@ -1,6 +1,13 @@
 2005-11-16  Vincent Noel  <vincent.noel@gmail.com>
 
 	* log_repaint.c: (logview_unbold_rows),
+	(logview_scroll_and_focus_path), (log_repaint): When switching to
+	a log with new lines, scroll down to the new lines and show them in
+	bold.
+
+2005-11-16  Vincent Noel  <vincent.noel@gmail.com>
+
+	* log_repaint.c: (logview_unbold_rows),
 	(logview_add_new_log_lines), (logview_scroll_and_focus_path),
 	(log_fill_model_no_date), (log_fill_model_date),
 	(logview_create_model), (log_repaint):
